k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wasm-executor
  namespace: wasm-executor
spec:
  selector:
    app: wasm-executor
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
